--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2,7 +2,10 @@
 title: "Exploratory Data Analysis of real estate market in Texas"
 author: "Mattia Guglielmelli"
 date: "2023-03-18"
-output: html_document
+output: 
+  prettydoc::html_pretty:
+    theme: cayman
+    highlight: github
 ---
 
 ```{r setup, include=FALSE}
